src/objects/CPA__c.object
<CustomObject>
    <fields>
        <fullName>CPA_Customer_Name__c</fullName>
        <label>CPA Customer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CPAs</relationshipLabel>
        <relationshipName>CPAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPA_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPA Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPA Clients</relationshipLabel>
        <relationshipName>CPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CPA For</relationshipLabel>
        <relationshipName>CPAs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_CPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary CPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>CPA</label>
    <nameField>
        <displayFormat>CPA-{00000}</displayFormat>
        <label>CPA Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>